VI-328 Changed field name for VIES application content type

--- a/config/sync/core.entity_view_display.node.vies_application_form.default.yml
+++ b/config/sync/core.entity_view_display.node.vies_application_form.default.yml
@@ -4,22 +4,22 @@ status: true
 dependencies:
   config:
     - field.field.node.vies_application_form.field_vies_about_school
+    - field.field.node.vies_application_form.field_vies_address
     - field.field.node.vies_application_form.field_vies_afterschool
+    - field.field.node.vies_application_form.field_vies_city
     - field.field.node.vies_application_form.field_vies_class
     - field.field.node.vies_application_form.field_vies_class_questions
+    - field.field.node.vies_application_form.field_vies_course
+    - field.field.node.vies_application_form.field_vies_email
+    - field.field.node.vies_application_form.field_vies_first_name
+    - field.field.node.vies_application_form.field_vies_gender
+    - field.field.node.vies_application_form.field_vies_last_name
+    - field.field.node.vies_application_form.field_vies_municipality
+    - field.field.node.vies_application_form.field_vies_newsletter
     - field.field.node.vies_application_form.field_vies_parents
     - field.field.node.vies_application_form.field_vies_period
-    - field.field.node.vies_application_form.field_vies_sex
-    - field.field.node.vies_application_form.field_vih_lco_address
-    - field.field.node.vies_application_form.field_vih_lco_city
-    - field.field.node.vies_application_form.field_vih_lco_course
-    - field.field.node.vies_application_form.field_vih_lco_email
-    - field.field.node.vies_application_form.field_vih_lco_first_name
-    - field.field.node.vies_application_form.field_vih_lco_last_name
-    - field.field.node.vies_application_form.field_vih_lco_municipality
-    - field.field.node.vies_application_form.field_vih_lco_newsletter
-    - field.field.node.vies_application_form.field_vih_lco_telefon
-    - field.field.node.vies_application_form.field_vih_lco_zip
+    - field.field.node.vies_application_form.field_vies_telefon
+    - field.field.node.vies_application_form.field_vies_zip
     - node.type.vies_application_form
   module:
     - user
@@ -36,6 +36,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_vies_address:
+    weight: 118
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_vies_afterschool:
     weight: 117
     label: above
@@ -43,6 +51,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_vies_city:
+    weight: 122
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_vies_class:
     weight: 112
@@ -60,6 +76,64 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_vies_course:
+    weight: 119
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_vies_email:
+    weight: 123
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vies_first_name:
+    weight: 124
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vies_gender:
+    weight: 128
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vies_last_name:
+    weight: 125
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vies_municipality:
+    weight: 126
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vies_newsletter:
+    weight: 120
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_vies_parents:
     weight: 116
     label: above
@@ -76,8 +150,16 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_vies_sex:
-    weight: 113
+  field_vies_telefon:
+    weight: 127
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vies_zip:
+    weight: 121
     label: above
     settings:
       link_to_entity: false
@@ -92,22 +174,6 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_vih_lco_city:
-    weight: 106
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_vih_lco_course:
-    weight: 110
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_lco_email:
     weight: 104
     label: above
@@ -116,42 +182,8 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_vih_lco_first_name:
-    weight: 101
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_vih_lco_last_name:
     weight: 102
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_vih_lco_municipality:
-    weight: 107
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_vih_lco_newsletter:
-    weight: 109
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_vih_lco_telefon:
-    weight: 103
     label: above
     settings:
       link_to_entity: false
@@ -170,4 +202,5 @@ content:
     weight: 100
     region: content
 hidden:
+  field_vih_lco_first_name: true
   langcode: true
