--- a/config/sync/core.entity_form_display.node.vies_application_form.default.yml
+++ b/config/sync/core.entity_form_display.node.vies_application_form.default.yml
@@ -4,22 +4,22 @@ status: true
 dependencies:
   config:
     - field.field.node.vies_application_form.field_vies_about_school
+    - field.field.node.vies_application_form.field_vies_address
     - field.field.node.vies_application_form.field_vies_afterschool
+    - field.field.node.vies_application_form.field_vies_city
     - field.field.node.vies_application_form.field_vies_class
     - field.field.node.vies_application_form.field_vies_class_questions
+    - field.field.node.vies_application_form.field_vies_course
+    - field.field.node.vies_application_form.field_vies_email
+    - field.field.node.vies_application_form.field_vies_first_name
+    - field.field.node.vies_application_form.field_vies_gender
+    - field.field.node.vies_application_form.field_vies_last_name
+    - field.field.node.vies_application_form.field_vies_municipality
+    - field.field.node.vies_application_form.field_vies_newsletter
     - field.field.node.vies_application_form.field_vies_parents
     - field.field.node.vies_application_form.field_vies_period
-    - field.field.node.vies_application_form.field_vies_sex
-    - field.field.node.vies_application_form.field_vih_lco_address
-    - field.field.node.vies_application_form.field_vih_lco_city
-    - field.field.node.vies_application_form.field_vih_lco_course
-    - field.field.node.vies_application_form.field_vih_lco_email
-    - field.field.node.vies_application_form.field_vih_lco_first_name
-    - field.field.node.vies_application_form.field_vih_lco_last_name
-    - field.field.node.vies_application_form.field_vih_lco_municipality
-    - field.field.node.vies_application_form.field_vih_lco_newsletter
-    - field.field.node.vies_application_form.field_vih_lco_telefon
-    - field.field.node.vies_application_form.field_vih_lco_zip
+    - field.field.node.vies_application_form.field_vies_telefon
+    - field.field.node.vies_application_form.field_vies_zip
     - node.type.vies_application_form
   module:
     - inline_entity_form
@@ -42,6 +42,14 @@ content:
     third_party_settings: {  }
     type: inline_entity_form_complex
     region: content
+  field_vies_address:
+    weight: 7
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_vies_afterschool:
     weight: 16
     settings:
@@ -54,6 +62,14 @@ content:
       match_operator: CONTAINS
     third_party_settings: {  }
     type: inline_entity_form_complex
+    region: content
+  field_vies_city:
+    weight: 8
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_vies_class:
     weight: 2
@@ -77,6 +93,62 @@ content:
     third_party_settings: {  }
     type: inline_entity_form_complex
     region: content
+  field_vies_course:
+    weight: 0
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_vies_email:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vies_first_name:
+    weight: 4
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vies_gender:
+    weight: 12
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vies_last_name:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vies_municipality:
+    weight: 9
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vies_newsletter:
+    weight: 13
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_vies_parents:
     weight: 15
     settings:
@@ -99,8 +171,16 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_vies_sex:
-    weight: 13
+  field_vies_telefon:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vies_zip:
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -115,49 +195,8 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_vih_lco_city:
-    weight: 9
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_vih_lco_course:
-    weight: 0
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_vih_lco_email:
-    weight: 7
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_vih_lco_first_name:
     weight: 4
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_vih_lco_last_name:
-    weight: 5
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_vih_lco_municipality:
-    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -170,14 +209,6 @@ content:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
-    region: content
-  field_vih_lco_telefon:
-    weight: 6
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
     region: content
   field_vih_lco_zip:
     weight: 11
