--- a/config/sync/field.field.node.vies_application_form.field_vies_address.yml
+++ b/config/sync/field.field.node.vies_application_form.field_vies_address.yml
@@ -1,18 +1,18 @@
-uuid: 8025ecab-0898-4a35-8415-f573e097b6b0
+uuid: aa19d892-1b7c-4582-9a8f-c139a29cfa2f
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_vih_lco_last_name
+    - field.storage.node.field_vies_address
     - node.type.vies_application_form
-id: node.vies_application_form.field_vih_lco_last_name
-field_name: field_vih_lco_last_name
+id: node.vies_application_form.field_vies_address
+field_name: field_vies_address
 entity_type: node
 bundle: vies_application_form
-label: 'Last name'
+label: Address
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
