--- a/config/sync/field.field.node.vies_application_form.field_vies_last_name.yml
+++ b/config/sync/field.field.node.vies_application_form.field_vies_last_name.yml
@@ -1,18 +1,18 @@
-uuid: 5ed9162f-705e-49b7-9514-963d12390029
+uuid: 624e7ed1-93d3-4ddc-8c24-7432608055b9
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_vih_lco_telefon
+    - field.storage.node.field_vies_last_name
     - node.type.vies_application_form
-id: node.vies_application_form.field_vih_lco_telefon
-field_name: field_vih_lco_telefon
+id: node.vies_application_form.field_vies_last_name
+field_name: field_vies_last_name
 entity_type: node
 bundle: vies_application_form
-label: Telefon
+label: 'Last name'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
