--- a/config/sync/field.field.node.vies_application_form.field_vies_newsletter.yml
+++ b/config/sync/field.field.node.vies_application_form.field_vies_newsletter.yml
@@ -1,23 +1,23 @@
-uuid: 98304797-c2db-4994-896d-2e2769a2e411
+uuid: 94059bc6-1364-41a6-a515-37ddab3cf538
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_vih_lco_newsletter
+    - field.storage.node.field_vies_newsletter
     - node.type.vies_application_form
-id: node.vies_application_form.field_vih_lco_newsletter
-field_name: field_vih_lco_newsletter
+id: node.vies_application_form.field_vies_newsletter
+field_name: field_vies_newsletter
 entity_type: node
 bundle: vies_application_form
 label: Newsletter
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 0
 default_value_callback: ''
 settings:
-  on_label: 'On'
-  off_label: 'Off'
+  on_label: Tilsluttet
+  off_label: Afbrudt
 field_type: boolean
