--- a/config/sync/field.field.node.vies_application_form.field_vies_zip.yml
+++ b/config/sync/field.field.node.vies_application_form.field_vies_zip.yml
@@ -1,15 +1,15 @@
-uuid: bb6dbe98-2370-4cb2-8844-d10e51bae70b
+uuid: f7ab7ae7-96e1-4169-b5a0-aa08c98cd97e
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_vies_sex
+    - field.storage.node.field_vies_zip
     - node.type.vies_application_form
-id: node.vies_application_form.field_vies_sex
-field_name: field_vies_sex
+id: node.vies_application_form.field_vies_zip
+field_name: field_vies_zip
 entity_type: node
 bundle: vies_application_form
-label: Sex
+label: ZIP
 description: ''
 required: false
 translatable: false
