--- a/docroot/modules/custom/vies_valuation/vies_valuation.routing.yml
+++ b/docroot/modules/custom/vies_valuation/vies_valuation.routing.yml
@@ -1,4 +1,4 @@
-vies_valuation.valuation_form:
+vies_valuation:
   path: 'taxonomy/term/{taxonomy_term}/valuation'
   defaults:
     _controller: '\Drupal\vies_valuation\Controller\ValuationController::page'
