--- a/config/sync/core.entity_form_display.node.vies_application_form.default.yml
+++ b/config/sync/core.entity_form_display.node.vies_application_form.default.yml
@@ -13,11 +13,13 @@ dependencies:
     - field.field.node.vies_application_form.field_vies_email
     - field.field.node.vies_application_form.field_vies_first_name
     - field.field.node.vies_application_form.field_vies_gender
+    - field.field.node.vies_application_form.field_vies_label
     - field.field.node.vies_application_form.field_vies_last_name
     - field.field.node.vies_application_form.field_vies_municipality
     - field.field.node.vies_application_form.field_vies_newsletter
     - field.field.node.vies_application_form.field_vies_parents
     - field.field.node.vies_application_form.field_vies_period
+    - field.field.node.vies_application_form.field_vies_status
     - field.field.node.vies_application_form.field_vies_telefon
     - field.field.node.vies_application_form.field_vies_zip
     - node.type.vies_application_form
@@ -126,6 +128,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vies_label:
+    weight: 28
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
   field_vies_last_name:
     weight: 5
     settings:
@@ -170,6 +178,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_vies_status:
+    weight: 27
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
     region: content
   field_vies_telefon:
     weight: 11
