--- a/config/sync/core.entity_view_display.paragraph.app_answer.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.app_answer.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.app_answer.field_answer
     - field.field.paragraph.app_answer.field_question
+    - field.field.paragraph.app_answer.field_question_reference
     - paragraphs.paragraphs_type.app_answer
 id: paragraph.app_answer.default
 targetEntityType: paragraph
@@ -25,5 +26,13 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_question_reference:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden: {  }
