--- a/config/sync/core.entity_form_display.block_content.basic.default.yml
+++ b/config/sync/core.entity_form_display.block_content.basic.default.yml
@@ -5,7 +5,9 @@ dependencies:
   config:
     - block_content.type.basic
     - field.field.block_content.basic.body
+    - field.field.block_content.basic.field_vih_block_expire_date
   module:
+    - datetime
     - text
     - workbench_moderation
 _core:
@@ -24,6 +26,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  field_vih_block_expire_date:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   info:
     type: string_textfield
     weight: -5
@@ -38,5 +46,8 @@ content:
     settings:
       include_locked: true
     third_party_settings: {  }
+    region: content
+  translation:
+    weight: 10
     region: content
 hidden: {  }
