VI-405 Added parent type configuration changes

--- a/config/sync/core.entity_form_display.paragraph.parent.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.parent.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.parent.field_parent_last_name
     - field.field.paragraph.parent.field_parent_newsletter
     - field.field.paragraph.parent.field_parent_telefon
+    - field.field.paragraph.parent.field_parent_type
     - field.field.paragraph.parent.field_parent_zip
     - paragraphs.paragraphs_type.parent
   module:
@@ -20,7 +21,7 @@ bundle: parent
 mode: default
 content:
   field_parent_address:
-    weight: 7
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -28,7 +29,7 @@ content:
     type: string_textfield
     region: content
   field_parent_city:
-    weight: 11
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -36,7 +37,7 @@ content:
     type: string_textfield
     region: content
   field_parent_email:
-    weight: 10
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -44,7 +45,7 @@ content:
     type: string_textfield
     region: content
   field_parent_first_name:
-    weight: 9
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -52,7 +53,7 @@ content:
     type: string_textfield
     region: content
   field_parent_last_name:
-    weight: 8
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -60,14 +61,22 @@ content:
     type: string_textfield
     region: content
   field_parent_newsletter:
-    weight: 14
+    weight: 8
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_parent_telefon:
-    weight: 12
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_parent_type:
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -75,7 +84,7 @@ content:
     type: string_textfield
     region: content
   field_parent_zip:
-    weight: 13
+    weight: 7
     settings:
       size: 60
       placeholder: ''
