--- a/config/sync/core.base_field_override.paragraph.long_course_list_contain_class.status.yml
+++ b/config/sync/core.base_field_override.paragraph.long_course_list_contain_class.status.yml
@@ -11,7 +11,7 @@ bundle: long_course_list_contain_class
 label: Published
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 1
