--- a/config/sync/views.view.vih_employees.yml
+++ b/config/sync/views.view.vih_employees.yml
@@ -129,7 +129,7 @@ display:
           admin_label: ''
           operator: in
           value:
-            da: da
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
           group: 1
           exposed: false
           expose:
