--- a/config/sync/views.view.vih_my_classes_nodes.yml
+++ b/config/sync/views.view.vih_my_classes_nodes.yml
@@ -597,6 +597,46 @@ display:
           entity_type: paragraph
           entity_field: langcode
           plugin_id: language
+        langcode_2:
+          id: langcode_2
+          table: users_field_data
+          field: langcode
+          relationship: field_vih_user
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: user
+          entity_field: langcode
+          plugin_id: language
       sorts:
         created:
           id: created
