--- a/config/sync/core.base_field_override.node.vih_event_order.status.yml
+++ b/config/sync/core.base_field_override.node.vih_event_order.status.yml
@@ -8,7 +8,7 @@ id: node.vih_event_order.status
 field_name: status
 entity_type: node
 bundle: vih_event_order
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: false
