--- a/config/sync/core.base_field_override.paragraph.long_course_list_contain_class.status.yml
+++ b/config/sync/core.base_field_override.paragraph.long_course_list_contain_class.status.yml
@@ -8,7 +8,7 @@ id: paragraph.long_course_list_contain_class.status
 field_name: status
 entity_type: paragraph
 bundle: long_course_list_contain_class
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
