--- a/config/sync/core.base_field_override.paragraph.1_column_action_centered.status.yml
+++ b/config/sync/core.base_field_override.paragraph.1_column_action_centered.status.yml
@@ -8,7 +8,7 @@ id: paragraph.1_column_action_centered.status
 field_name: status
 entity_type: paragraph
 bundle: 1_column_action_centered
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
