--- a/config/sync/core.base_field_override.paragraph.article.status.yml
+++ b/config/sync/core.base_field_override.paragraph.article.status.yml
@@ -8,7 +8,7 @@ id: paragraph.article.status
 field_name: status
 entity_type: paragraph
 bundle: article
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
