--- a/config/sync/core.base_field_override.paragraph.class_packages.status.yml
+++ b/config/sync/core.base_field_override.paragraph.class_packages.status.yml
@@ -8,7 +8,7 @@ id: paragraph.class_packages.status
 field_name: status
 entity_type: paragraph
 bundle: class_packages
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
