--- a/config/sync/core.base_field_override.paragraph.event_list.status.yml
+++ b/config/sync/core.base_field_override.paragraph.event_list.status.yml
@@ -8,7 +8,7 @@ id: paragraph.event_list.status
 field_name: status
 entity_type: paragraph
 bundle: event_list
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
