--- a/config/sync/core.base_field_override.paragraph.file.status.yml
+++ b/config/sync/core.base_field_override.paragraph.file.status.yml
@@ -8,7 +8,7 @@ id: paragraph.file.status
 field_name: status
 entity_type: paragraph
 bundle: file
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
