--- a/config/sync/core.base_field_override.paragraph.list_of_news_teasers.status.yml
+++ b/config/sync/core.base_field_override.paragraph.list_of_news_teasers.status.yml
@@ -8,7 +8,7 @@ id: paragraph.list_of_news_teasers.status
 field_name: status
 entity_type: paragraph
 bundle: list_of_news_teasers
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
