--- a/config/sync/core.base_field_override.paragraph.social_media_embed.status.yml
+++ b/config/sync/core.base_field_override.paragraph.social_media_embed.status.yml
@@ -8,7 +8,7 @@ id: paragraph.social_media_embed.status
 field_name: status
 entity_type: paragraph
 bundle: social_media_embed
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
