--- a/config/sync/core.base_field_override.paragraph.user_quote.status.yml
+++ b/config/sync/core.base_field_override.paragraph.user_quote.status.yml
@@ -8,7 +8,7 @@ id: paragraph.user_quote.status
 field_name: status
 entity_type: paragraph
 bundle: user_quote
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
