--- a/config/sync/core.base_field_override.paragraph.vih_class_groups_accordion.status.yml
+++ b/config/sync/core.base_field_override.paragraph.vih_class_groups_accordion.status.yml
@@ -8,7 +8,7 @@ id: paragraph.vih_class_groups_accordion.status
 field_name: status
 entity_type: paragraph
 bundle: vih_class_groups_accordion
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
