--- a/config/sync/core.base_field_override.paragraph.vih_option_group.status.yml
+++ b/config/sync/core.base_field_override.paragraph.vih_option_group.status.yml
@@ -8,7 +8,7 @@ id: paragraph.vih_option_group.status
 field_name: status
 entity_type: paragraph
 bundle: vih_option_group
-label: Published
+label: Udgivet
 description: ''
 required: false
 translatable: true
