--- a/config/sync/core.entity_form_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.file.default.yml
@@ -24,7 +24,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 5
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -68,7 +68,7 @@ content:
     type: text_textarea
     region: content
   field_vih_file:
-    weight: 3
+    weight: 2
     settings:
       entity_browser: media_browser
       field_widget_display: label
@@ -89,15 +89,21 @@ content:
     type: string_textfield
     region: content
   field_vih_link:
-    weight: 4
+    weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
     region: content
+  status:
+    type: boolean_checkbox
+    weight: 5
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
   translation: true
   uid: true
