--- a/config/sync/core.entity_form_display.paragraph.long_course_list_.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.long_course_list_.default.yml
@@ -23,7 +23,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 3
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -68,7 +68,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_empty_message:
-    weight: 11
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -84,17 +84,25 @@ content:
     type: string_textfield
     region: content
   field_vih_link:
-    weight: 2
+    weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
     region: content
-  translation:
-    weight: 10
+  status:
+    type: boolean_checkbox
+    weight: 6
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  translation:
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
   uid: true
