--- a/config/sync/core.entity_form_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.video.default.yml
@@ -24,7 +24,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 5
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -85,14 +85,22 @@ content:
     third_party_settings: {  }
   field_vih_video:
     type: video_embed_field_textfield
-    weight: 4
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
-  translation:
-    weight: 10
+  status:
+    type: boolean_checkbox
+    weight: 6
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  translation:
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
   uid: true
