--- a/config/sync/core.entity_form_display.paragraph.vih_contact_person.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_contact_person.default.yml
@@ -92,7 +92,13 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  status:
+    type: boolean_checkbox
+    weight: 5
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
   uid: true
