--- a/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
@@ -23,7 +23,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -60,14 +60,14 @@ content:
     third_party_settings: {  }
   field_vih_description:
     type: text_textarea
-    weight: 3
+    weight: 2
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_vih_heading:
-    weight: 1
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -76,7 +76,7 @@ content:
     region: content
   field_vih_photo:
     type: entity_browser_entity_reference
-    weight: 8
+    weight: 4
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
@@ -90,18 +90,25 @@ content:
     third_party_settings: {  }
   field_vih_user:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 1
     region: content
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  translation:
-    weight: 10
+  status:
+    type: boolean_checkbox
+    weight: 6
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  translation:
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
-  translation: true
   uid: true
