--- a/config/sync/core.entity_form_display.paragraph.vih_webform.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_webform.default.yml
@@ -71,11 +71,18 @@ content:
     third_party_settings: {  }
     type: webform_entity_reference_select
     region: content
-  translation:
-    weight: 10
+  status:
+    type: boolean_checkbox
+    weight: 4
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  translation:
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
-  translation: true
   uid: true
