--- a/config/sync/core.entity_form_display.paragraph.vih_wrapper.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_wrapper.default.yml
@@ -69,7 +69,13 @@ content:
       default_paragraph_type: _none
     third_party_settings: {  }
     region: content
+  status:
+    type: boolean_checkbox
+    weight: 2
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
   uid: true
