--- a/docroot/modules/custom/vies_valuation/vies_valuation.routing.yml
+++ b/docroot/modules/custom/vies_valuation/vies_valuation.routing.yml
@@ -4,4 +4,4 @@ vies_valuation:
     _controller: '\Drupal\vies_valuation\Controller\ValuationController::page'
     _title: 'Vurdering'
   requirements:
-    _access: 'TRUE'
+    _permission: 'access valuation'
