VI-441 Added option to open privacy policy link in a modal window.

--- a/composer.json
+++ b/composer.json
@@ -128,6 +128,9 @@
             "drupal/photoswipe": {
                 "2921487 - Load PhotoSwipe on all non-admin pages" : "https://www.drupal.org/files/issues/edit_load_photoswipe_on-2921487-2.patch",
                 "2894797 - Multiple galleries: opens the wrong image" : "https://www.drupal.org/files/issues/fix-image-index-2894797.patch"
+            },
+            "drupal/eu_cookie_compliance": {
+                "2979295 - Add a option to open privacy policy link in a modal window" : "https://www.drupal.org/files/issues/2018-06-13/eu_cookie_compliance_privacy_policy_link_in_modal_window.patch"
             }
         }
     }
